fix overflow and host

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -2,7 +2,9 @@
   background: lightblue;
   display: flex;
   align-items: center;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
   touch-action: none;
+  overflow: hidden;
+  position: relative;
 }
